# LoAT

./: .gitignore  CMakeLists.txt
cmake/: ConfigureExecutable.cmake  Dependencies.cmake  ExecutableSetup.cmake  IntegrateSubfolderFiles.cmake  LoAT_APIConfig.cmake.in  LoAT_API_StaticConfig.cmake.in
docker/: antlr4.Dockerfile  cln.Dockerfile  crab.Dockerfile  cudd.Dockerfile  cvc5.Dockerfile  elina.Dockerfile  faudes.Dockerfile  poly.Dockerfile  smtrat.Dockerfile  swine.Dockerfile  yices.Dockerfile  z3.Dockerfile
src/: CMakeLists.txt
src/abmc/: abmc.hpp
src/api/: abmc_api.cpp  abmc_api.hpp  adcl_api.cpp  adcl_api.hpp  adclsat_api.cpp  adclsat_api.hpp  loat_api.hpp
src/parser/koatParser/: CMakeLists.txt
src/parser/smt2Parser/: CMakeLists.txt
