add_subdirectory(lib)
add_subdirectory(preprocess)
add_subdirectory(interleaved)
add_subdirectory(adcl)
add_subdirectory(asymptotic)
add_subdirectory(parser)
add_subdirectory(abmc)
add_subdirectory(trl)
add_subdirectory(adclsat)
add_subdirectory(bmc)

include(${CMAKE_SOURCE_DIR}/cmake/IntegrateSubfolderFiles.cmake)